# libcrowdclient

./: .project  AUTHORS  ChangeLog  Makefile.am  README.md  bootstrap.sh  configure.ac
include/: Makefile.am  crowdclient.hpp
src/: Makefile.am  crowdcache.cpp  crowdcache_p.hpp  crowdclient.cpp  main.cpp
src/soap/: Makefile.am  crowdsoap.h
support/: libcrowdclient.changes  libcrowdclient.spec
